# dive2024-server

./: .gitignore  README.md  db.sqlite3
Bumeet/: asgi.py  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py
Bumeet/Bumeet/: settings.py  urls.py  wsgi.py
Bumeet/JobList/: models.py  serializers.py  urls.py  views.py
Bumeet/JobList/csv_data/: DIVE2024_DATA.csv
Bumeet/JobList/migrations/: 0001_initial.py
Bumeet/Mentoring/: apps.py  models.py  serializers.py  urls.py  views.py
Bumeet/Mentoring/migrations/: 0001_initial.py  0002_initial.py  0003_alter_matching_mento_name.py  0004_remove_matching_mentee_name_and_more.py
Bumeet/RentalHousing/: apps.py  urls.py  views.py
Bumeet/User/: models.py  serializers.py  urls.py  views.py
Bumeet/User/migrations/: 0001_initial.py
Bumeet/chat/: agent.py  config.py  prompt.py  schemas.py  urls.py  views.py
Bumeet/chroma/: chroma.sqlite3
Bumeet/chroma_store/: chroma.sqlite3
Recruit_list/: apps.py  models.py  serializers.py  urls.py  views.py
Recruit_list/migrations/: 0001_initial.py
