[tool.poetry]
name = "bumeet"
version = "0.1.0"
description = ""
authors = ["ormor <htth815@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
django = "5.0"
djangorestframework = "3.15.2"
pillow = "10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
